--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -127,6 +127,7 @@ ja:
       not_an_integer: は整数で入力してください
       odd: は奇数にしてください
       other_than: は%{count}以外の値にしてください
+      presence_of: を入力してください
       present: は入力しないでください
       required: を入力してください
       taken: はすでに存在します
